ArrayStack now implemented using the RingArray; added the toArray() method; fixed some contracts